--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Dániel László</title>
 </head>
 <body>
     <h1>Dániel László</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur 
+        adipisicing elit. Veniam, laboriosam est 
+        soluta voluptatum hic esse temporibus? 
+        Voluptatem ea, eius eaque sed et sint odit 
+        iusto voluptate, quam, unde aspernatur quae.</p>
 </body>
 </html>
