drótváz és kiinduló fájlok

--- a/index.html
+++ b/index.html
@@ -8,11 +8,60 @@
     <title>Dániel László</title>
 </head>
 <body>
-    <h1>Dániel László</h1>
-    <p>Lorem, ipsum dolor sit amet consectetur 
-        adipisicing elit. Veniam, laboriosam est 
-        soluta voluptatum hic esse temporibus? 
-        Voluptatem ea, eius eaque sed et sint odit 
-        iusto voluptate, quam, unde aspernatur quae.</p>
+    <main>
+        <nav>
+            <ul>
+                <li><a href="index.html">Tantárgyak</a></li>
+                <li><a href="index.html">Matek érettségi</a></li>
+                <li><a href="index.html">Képletek</a></li>
+                <li><a href="index.html">Rólunk</a></li>
+                <li><a href="index.html"></a></li>
+                <li><a href="index.html">Belépés</a></li>
+            </ul>
+            <ul>
+                <li><a href="index.html">Középiskolai matek</a></li>
+                <li><a href="index.html">Analízis 1</a></li>
+                <li><a href="index.html">Analízis 2</a></li>
+                <li><a href="index.html">Analízis 3</a></li>
+                <li><a href="index.html">Valószínűségszámítás</a></li>
+                <li><a href="index.html">Lineáris algebra</a></li>
+                <li><a href="index.html">Statisztika</a></li>
+                <li><a href="index.html">Diszkrét matematika</a></li>
+            </ul>
+        </nav>
+        <article>
+            <h1>A WEBOLDAL</h1>
+            <p>
+                A mateking egy forradalmian új matektanulási módszer, 
+                amit azért választottak már több mint 180 ezren, hogy 
+                végre ne álljon a matek a tanulmányaik és a sikereik 
+                útjába. Rövid, könnyen érthető epizódokban, szemléletes 
+                példákkal magyarázzuk el a legbonyolultabb matematikai 
+                összefüggéseket gimnáziumi és egyetemi szinten is. Ezzel 
+                nem csak rengeteg időt spórolunk meg a nálunk tanuló diákoknak, 
+                de közben igazi élménnyé is változtatjuk számukra a matektanulást. 
+                Célunk nemzetközi szinten is elismert matematikai oktatási platformok 
+                üzemeltetése és fejlesztése, melyek egyre több tananyaggal egyre 
+                több felhasználót vonzanak. Olyan matematika tanulási módszereket 
+                szeretnénk adni a diákok és tanáraik kezébe, amelyeket élmény 
+                használni és amelyek hatékonyan segítséget adnak a tanulmányi 
+                céljaik elérésében. A weboldal megszületésének történetéről <a href="index.html">itt olvashatsz</a>.
+            </p>
+            <h1>A CSAPAT</h1>
+            <img src="kepek/mosocziandras.jpg" alt="mosocziandras">
+            <p> <strong>Mosóczi András</strong> hazánk egyik legnépszerűbb matematikaoktató 
+                weboldalának alapítója. Írásaiban, előadásaiban és oktatóanyagaiban 
+                hihetetlenül laza, mégis rendkívül precíz stílusban mutatja be a matematika 
+                világát. Matematika Guru, aki mer és tud másképp gondolkodni a tanításról. 
+                Közel 20 éve foglalkozik egyetemisták és főiskolások oktatásával, számos 
+                egyetemen, a BME-től az ELTÉ-n át a BGE-ig. Az ez idő alatt megszerzett 
+                tapasztalatokat és tudást 2010-ben kezdte el online oktatóanyagokba 
+                sűríteni. Olyan epizódokba és videókba, ahol a világos és egyszerű 
+                magyarázatok közvetlen és humoros stílusban, bárki számára érthetővé 
+                teszik a matematikát. Jelenleg a több mint 180 ezer felhasználóval 
+                rendelkező mateking.hu oldal vezetője, emellett pedig a német nyelvű 
+                változat, a <a href="index.html">matheking.at</a> e-learning oldal fejlesztésén dolgozik.</p>
+        </article>
+    </main>
 </body>
 </html>
